# BT

./: .env.example  .gitignore  README.md  TODO.md  TWO_STAGE_RERANKING_PLAN.md  pyproject.toml
job_hunter/: __init__.py  apply_jobs.py  config.py  funnel_report.py  gmail_auth.py  handshake_login.py  interstride_login.py  keywords.py  label_jobs.py  linkedin_login.py  logging_utils.py  maintain_sources.py  models.py  notify.py  pipeline.py  run_loop.py  run_once.py  source_maintenance.py  stage2.py  stage2_local_embeddings.py  stage2_report.py  stage2_semantic.py  storage.py  tailor_jobs.py
job_hunter/apply/: __init__.py  browser.py  email_codes.py  profile_loader.py  resolver.py  service.py  types.py
job_hunter/data/: greenhouse_tokens.quarantine.txt  greenhouse_tokens.txt  lever_tokens.quarantine.txt  lever_tokens.txt  rss_feeds.quarantine.txt  rss_feeds.txt
job_hunter/sources/: __init__.py  adzuna.py  arbeitnow.py  ashby.py  base.py  github_repo.py  greenhouse.py  handshake.py  interstride.py  lever.py  linkedin.py  remotive.py  rss.py  themuse.py  usajobs.py
job_hunter/tailoring/: __init__.py  provider.py  service.py  types.py
tests/: test_apply_jobs.py  test_ashby_source.py  test_config.py  test_funnel_report.py  test_github_repo_source.py  test_gmail_auth.py  test_handshake_source.py  test_interstride_source.py  test_label_jobs.py  test_linkedin_config.py  test_linkedin_source.py  test_pipeline.py  test_source_maintenance.py  test_stage2.py  test_stage2_local_embeddings.py  test_stage2_report.py  test_stage2_semantic.py  test_tailor_jobs.py
(+15 files in other folders)
