[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "job-hunter"
version = "0.1.0"
description = "Automated internship sourcing pipeline"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.60,<2",
]

[project.optional-dependencies]
local-embeddings = [
    "numpy>=1.26,<3",
    "sentence-transformers>=3,<4",
]

[tool.setuptools]
packages = ["job_hunter", "job_hunter.sources"]
